@@ -205,6 +205,7 @@ prefix = share/profiles/default
 ; FileFinders and Filters, OR simply to prune auto/*
 -remove = PodCoverageTests  ; see RT#85709
 -remove = Test::Pod::No404s
+-remove = ShareDir          ; until we depend on 0.094
 :version = 0.086
 installer = MakeMaker::Fallback
 installer = ModuleBuildTiny
@@ -215,3 +216,5 @@ Test::ReportPrereqs.include = Dist::CheckConflicts
 ; ourselves when git is not available.
 [CheckBin]
 command = git
+
+[ShareDir]
